--- a/src/scripts/data/assets/simtropolis/111-automata.yaml
+++ b/src/scripts/data/assets/simtropolis/111-automata.yaml
@@ -6473,6 +6473,15 @@ assets:
     uncompressed: 18978196
     url: https://community.simtropolis.com/files/file/36411-bsc-vip-girafe-train-tgv-duplex/
     version: 1.0.0
+  simtropolis/36648:
+    assetId: simtropolis/36648-automated-horse-drawn-carriage-automata-patch
+    authors:
+      - justforfun
+    category: 111-automata
+    lastModified: 2025-01-01T22:41:30.000Z
+    name: Automated Horse-drawn Carriage Automata Patch
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2025_01/JFFCarriagesPatch.thumb.jpg.4ddebf305f7beaea60eaf865cbb95ede.jpg
+    url: https://community.simtropolis.com/files/file/36648-automated-horse-drawn-carriage-automata-patch/
   simtropolis/3679:
     assetId: simtropolis/3679-driveable-checker-taxis
     authors:
@@ -6763,4 +6772,4 @@ assets:
     url: https://community.simtropolis.com/files/file/569-the-cow/
 
 meta:
-  timestamp: 2024-12-19T08:48:47.951Z
+  timestamp: 2025-01-06T10:30:47.596Z
