--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,8 @@
 {
-  "recommendations": ["arcanis.vscode-zipfs", "biomejs.biome", "mikestead.dotenv"]
+  "recommendations": [
+    "arcanis.vscode-zipfs",
+    "biomejs.biome",
+    "mikestead.dotenv",
+    "redhat.vscode-yaml"
+  ]
 }
