--- a/src/scripts/data/assets/simtropolis/103-industrial.yaml
+++ b/src/scripts/data/assets/simtropolis/103-industrial.yaml
@@ -1156,9 +1156,9 @@ assets:
     authors:
       - Decius
     category: 103-industrial
-    lastModified: 2003-11-12T18:26:43.000Z
+    lastModified: 2024-12-26T14:47:36.000Z
     name: RisingSun Oil Refinery
-    thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2003/thumb-76cc006000f90462afbd8cb2fde64950-RisingSunOilRefineryScreenshot.jpg
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_12/676d6c880fb65_RisingSunOilRefinery.thumb.jpg.bad6b9adcd8f9d517fd450387e37041d.jpg
     url: https://community.simtropolis.com/files/file/1674-risingsun-oil-refinery/
   simtropolis/16745:
     assetId: simtropolis/16745-blam-jamison-steel-works
@@ -3596,40 +3596,41 @@ assets:
       - simgoober/mega-props-vol01
     description: "<body>\n\t\t\t\t\t\t\t\n\t\t\t\t\t\t\t\n<p>\n\tThere were these two guys with a faible for bicycles, dreaming how good it would be to have bikes roaming all over the sim-planet... better air, fewer fat people, new business opportunities... So they put together their meager resources, leased a run down warehouse, started deforming metal... and built an empire!\n</p>\n\n<p>\n\t<span style=\"color:#339966;\"><strong>LOTS</strong></span>\n</p>\n\n<p>\n\t<strong>Industrials</strong> (plop)\n</p>\n\n<p>\n\t* 5x3 PAMU Metalworks (Shelters, Stands etc.) - 74 I-M jobs\n</p>\n\n<p>\n\t* 3x3 PAMU Manufacture (Custom Bikes) - 58 I-M jobs\n</p>\n\n<p>\n\t<strong>Commercials</strong> (plop)\n</p>\n\n<p>\n\t* 4x3 PAMU Headquarters - 42 CS$$ jobs\n</p>\n\n<p>\n\t* 2x2 PAMU Retail Store - 9 CS$ jobs\n</p>\n\n<p>\n\t* 2x2 PAMU Service and Repair - 12 CS$ jobs\n</p>\n\n<p>\n\t* 2x1 Bike Couriers - 32 CS$ jobs\n</p>\n\n<p>\n\t* 2x1 Second Hand / Repair Shop - 5 CS$ jobs\n</p>\n\n<p>\n\t<strong>Bike Parking</strong>\n</p>\n\n<p>\n\t* 1x1 Corner\n</p>\n\n<p>\n\t* 1x1 Straight\n</p>\n\n<p>\n\t* 1x1 Straight with one bad weather shelter\n</p>\n\n<p>\n\t* 1x1 Straight with two bad weather shelters\n</p>\n\n<p>\n\t* 1x1 PAMU Bike Rental Station\n</p>\n\n<p>\n\t<strong>Park+Ride</strong>\n</p>\n\n<p>\n\t* 2x1 Combined Car/Bike Parking - Capacity: 250\n</p>\n\n<p>\n\t* 2x2 Combined Car/Bike Parking - Capacity: 400\n</p>\n\n<p>\n\tThe traffic switch is still from car to ped - but at least it *looks* as if some are arriving with their bikes, too...\n</p>\n\n<p>\n\t<strong>Others</strong>\n</p>\n\n<p>\n\t* 6x6 PAMU Traffic Kindergarten and Bike Training - Capacity: 50\n</p>\n\n<p>\n\tWorks like a real school, but for a limited number of students - so don't try to skimp on the rest of your education program...\n</p>\n\n<p>\n\tAll other stats like power, water, monthly costs etc. are indicated via the ingame menu.\n</p>\n\n<p>\n\tThe 'IND and COM' lots are in the 'Landmarks' menu.\n</p>\n\n<p>\n\tThe various 'Parking' lots are in the 'Traffic | Miscellaneous' menu.\n</p>\n\n<p>\n\tThe 'Traffic Kindergarten' is in the 'Education' menu.\n</p>\n\n<p>\n\tThey all have custom icons for easy identification.\n</p>\n\n<p>\n\t<span style=\"color:#800000;\"><strong>DEPENDENCIES</strong></span>\n</p>\n\n<p>\n\t* <a href=\"https://community.simtropolis.com/files/file/20966-peg-mtp-super-pack/\" rel=\"\"><abbr title=\"Pegasus\">PEG</abbr> <abbr title=\"Mountain Theme Pack\">MTP</abbr> SUPER PACK</a> \_\n</p>\n\n<p>\n\t* <a href=\"https://community.simtropolis.com/files/file/15287-bsc-mega-props-sg-vol-01/\" rel=\"\"><abbr title=\"BATT Squad Certification\">BSC</abbr> MEGA Props - SG Vol 01</a>\n</p>\n\n<p>\n\t<em>Additional (for the industrial lots)</em>\n</p>\n\n<p>\n\t* <a href=\"https://community.simtropolis.com/files/file/19338-peg-security-fencing-kit/\" rel=\"\"><abbr title=\"Pegasus\">PEG</abbr> Security Fencing Kit</a> \_\n</p>\n\n<p>\n\t* <a href=\"https://community.simtropolis.com/files/file/19786-peg-cdk3-sp-rail-fleet/\" rel=\"\"><abbr title=\"Pegasus\">PEG</abbr> Rail-Fleet RESOURCE</a>\n</p>\n\n<p>\n\tIt is assumed that you have * bldgprop vol1 and vol2 installed as well.\n</p>\n\n<p>\n\t<span style=\"color:#339966;\"><strong>DEVELOPER NOTES</strong></span>\n</p>\n\n<p>\n\tMany of the lots come in two flavors - urban and rural. You can use the sets together or just one of them. This goes for all the included lots - delete any you do not wish to use.\n</p>\n\n<p>\n\t<span style=\"color:#FF0000;\"><strong>Just make sure you always keep the complete folder named *PAMU-Bikes_Resource* installed.</strong></span>\n</p>\n\n<p>\n\tMore detailed infos -e.g. on benefits, randomized and timed props etc.- in the included Read_Me.\n</p>\n\n<p>\n\t<span style=\"color:#339966;\"><strong>RECOMMENDATION</strong></span>\n</p>\n\n<p>\n\t\_ To add bikes outside of the designated lots we recommended this set of major mode ploppables (optional):\n</p>\n\n<p>\n\t* <a href=\"https://community.simtropolis.com/files/file/24859-bikes/\" rel=\"\">Bikes by NBVC</a>\n</p>\n\n<p>\n\t\_ <span style=\"color:#339966;\"><strong>CREDITS</strong></span>\n</p>\n\n<p>\n\tBATting: <strong>Murimk</strong>\n</p>\n\n<p>\n\tLOTting and MODding: <strong>Paeng</strong>\n</p>\n\n<p>\n\tThe props from this pack can be used to make your own lots. Do not include them in your upload though - please point to this pack as a dependency.\n</p>\n\n<p>\n\t<span style=\"color:#339966;\"><strong>SUPPORT</strong></span>\n</p>\n\n<p>\n\t<s>Should you need support for these items please visit the * <a href=\"https://community.simtropolis.com/forums/topic/68471-plex-on-the-stex-community-support/forum/index.php?topic=9079.0\" rel=\"external nofollow\">PAMU Dev Thread</a>\_ with a History and many action-packed images :-)</s>\n</p>\n\n<p>\n\t<span style=\"color:#2980b9;\"><strong>-Cori Edit: </strong>Fixed formatting and broken linkys.</span>\n</p>\n\n\t\t\t\t\t\t</body>"
     file: pamu-bikes-v1.zip
+    filename: pamu-bikes-v1.zip
     files:
-      - PAMU_Bikes_v100/pic02.jpg
-      - PAMU_Bikes_v100/pic01.jpg
-      - PAMU_Bikes_v100/PAMU_readme.txt
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Urban_Bike_Park/Bike_Rental-urb_d9f7d34d.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Urban_Bike_Park/Bikestand_str-urb_79f7d323.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Urban_Bike_Park/Bikestand_single-shed-urb_79f81036.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Urban_Bike_Park/Bikestand_shed01-urb_79f7e0cd.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Urban_Bike_Park/Bikestand_corner-urb_59f7d335.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Rural_Bike_Park/Bike_Rental-rur_39f6dc1c.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Rural_Bike_Park/Bikestand_str-rur_39f6c2b8.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Rural_Bike_Park/Bikestand_single-shed-rur_79f80b06.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Rural_Bike_Park/Bikestand_shed02-rur_79f7e2fc.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Rural_Bike_Park/Bikestand_corner-rur_39f6df44.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Park-and-Ride/Bike_ParkandRide_urban_d9f96b32.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Park-and-Ride/Bike_ParkandRide_urban-large_d9fd524b.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Park-and-Ride/Bike_ParkandRide_rural_d9fd4da0.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Park-and-Ride/Bike_ParkandRide_rural-large_d9fd5cd3.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Bike_Kindergarten/Bike_Kindergarten_d9f99d8a.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/PAMU-Bikes_Jobs/Bike_Metalworks_d9f934ac.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/PAMU-Bikes_Jobs/Bike_Manufacturer_59f743bd.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/PAMU-Bikes_Jobs/BikeShop_secondhand_99f89f7e.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/PAMU-Bikes_Jobs/Bikeshop_luxury_99f86dc5.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/PAMU-Bikes_Jobs/BikeShop_39f71155.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/PAMU-Bikes_Jobs/BikeRepairRetail_d9f98171.SC4Lot
-      - PAMU_Bikes_v100/PAMU_Bikes_Lots/PAMU-Bikes_Jobs/BikeCouriers_99f89062.SC4Lot
-      - PAMU_Bikes_v100/PAMU-Bikes_Resource/PAMU-Bikes_Props/PAMU_Fam-Names.dat
       - PAMU_Bikes_v100/PAMU-Bikes_Resource/KEEP_Common_Files/common.dat
-      - PAMU_Bikes_v100/PAMU-Bikes_Resource/PAMU-Bikes_Props/Signs/signs.dat
-      - PAMU_Bikes_v100/PAMU-Bikes_Resource/PAMU-Bikes_Props/Bike_Stands/stands-simple.dat
-      - PAMU_Bikes_v100/PAMU-Bikes_Resource/PAMU-Bikes_Props/Bike_Stands/stands-shop.dat
       - PAMU_Bikes_v100/PAMU-Bikes_Resource/PAMU-Bikes_Props/Bike_Shelters/shelters.dat
-      - PAMU_Bikes_v100/PAMU-Bikes_Resource/PAMU-Bikes_Props/Bikes/bikes.dat
+      - PAMU_Bikes_v100/PAMU-Bikes_Resource/PAMU-Bikes_Props/Bike_Stands/stands-shop.dat
+      - PAMU_Bikes_v100/PAMU-Bikes_Resource/PAMU-Bikes_Props/Bike_Stands/stands-simple.dat
       - PAMU_Bikes_v100/PAMU-Bikes_Resource/PAMU-Bikes_Props/Bikers/bikers.dat
+      - PAMU_Bikes_v100/PAMU-Bikes_Resource/PAMU-Bikes_Props/Bikes/bikes.dat
+      - PAMU_Bikes_v100/PAMU-Bikes_Resource/PAMU-Bikes_Props/PAMU_Fam-Names.dat
+      - PAMU_Bikes_v100/PAMU-Bikes_Resource/PAMU-Bikes_Props/Signs/signs.dat
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Bike_Kindergarten/Bike_Kindergarten_d9f99d8a.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/PAMU-Bikes_Jobs/BikeCouriers_99f89062.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/PAMU-Bikes_Jobs/BikeRepairRetail_d9f98171.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/PAMU-Bikes_Jobs/BikeShop_39f71155.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/PAMU-Bikes_Jobs/BikeShop_secondhand_99f89f7e.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/PAMU-Bikes_Jobs/Bike_Manufacturer_59f743bd.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/PAMU-Bikes_Jobs/Bike_Metalworks_d9f934ac.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/PAMU-Bikes_Jobs/Bikeshop_luxury_99f86dc5.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Park-and-Ride/Bike_ParkandRide_rural-large_d9fd5cd3.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Park-and-Ride/Bike_ParkandRide_rural_d9fd4da0.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Park-and-Ride/Bike_ParkandRide_urban-large_d9fd524b.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Park-and-Ride/Bike_ParkandRide_urban_d9f96b32.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Rural_Bike_Park/Bike_Rental-rur_39f6dc1c.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Rural_Bike_Park/Bikestand_corner-rur_39f6df44.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Rural_Bike_Park/Bikestand_shed02-rur_79f7e2fc.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Rural_Bike_Park/Bikestand_single-shed-rur_79f80b06.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Rural_Bike_Park/Bikestand_str-rur_39f6c2b8.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Urban_Bike_Park/Bike_Rental-urb_d9f7d34d.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Urban_Bike_Park/Bikestand_corner-urb_59f7d335.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Urban_Bike_Park/Bikestand_shed01-urb_79f7e0cd.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Urban_Bike_Park/Bikestand_single-shed-urb_79f81036.SC4Lot
+      - PAMU_Bikes_v100/PAMU_Bikes_Lots/Urban_Bike_Park/Bikestand_str-urb_79f7d323.SC4Lot
+      - PAMU_Bikes_v100/PAMU_readme.txt
+      - PAMU_Bikes_v100/pic01.jpg
+      - PAMU_Bikes_v100/pic02.jpg
     images:
       - https://www.simtropolis.com/objects/screens/0008/3d5619d3aecf37e1691f620299516324-stex1.jpg
       - https://www.simtropolis.com/objects/screens/0008/3d5619d3aecf37e1691f620299516324-stex2.jpg
@@ -4345,7 +4346,7 @@ assets:
             - 1da447b0
             - 1da479e5
     meta:
-      timestamp: 2024-12-17T15:56:18.370Z
+      timestamp: 2025-01-06T12:12:25.449Z
       version: 1
     models:
       PAMU_Bikes_v100/PAMU-Bikes_Resource/KEEP_Common_Files/common.dat:
@@ -10162,7 +10163,7 @@ assets:
       - https://www.simtropolis.com/objects/screens/monthly_2024_10/670744397c3d7_InnovationCenter01.jpg.bcd8b7892b6ceac083129884fc3d1272.jpg
     lastModified: 2024-10-10T03:05:13.000Z
     meta:
-      timestamp: 2024-12-16T12:01:08.007Z
+      timestamp: 2025-01-06T12:12:25.449Z
       version: 1
     name: Innovation Center
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_10/67074468d21d6_InnovationCenter00.thumb.jpg.29699e3b8c7a35bf1d8f69c6bbb8bbc1.jpg
@@ -10844,4 +10845,4 @@ assets:
     url: https://community.simtropolis.com/files/file/976-umbrella-inc-research-facility/
 
 meta:
-  timestamp: 2024-12-19T08:48:47.951Z
+  timestamp: 2025-01-06T10:30:47.596Z
