--- a/src/scripts/data/assets/simtropolis/115-tools.yaml
+++ b/src/scripts/data/assets/simtropolis/115-tools.yaml
@@ -692,13 +692,14 @@ assets:
     dependencies: []
     description: "<body>\n\t\t\t\t\t\t\t\n\t\t\t\t\t\t\t\t<div style=\"position:absolute; top:0px; right:0px;\">\n\t\t\t\t\t\t\t\t  <img _title=\"This is a Popular File\" alt=\"\" class=\"ipsImage\" data-ipstooltip=\"\" src=\"https://www.simtropolis.com/library/misc/big-heart-icon.png\" style=\"\" width=\"34\" height=\"53\">\n\t\t\t\t\t\t\t\t</div>\n\t\t\t\t\t\t\t\n\t\t\t\t\t\t\t\n<p>========================================================</p>\n<p>SPOT (Simpeg Plop Orientation Tool)</p>\n<p>========================================================</p>\n<p>\_</p>\n<p>This is a set of props you can add to your lots to aid the player in seeing how to orient the lot.</p>\n<p>\_</p>\n<p>Where needed, these will be used on Simpeg Team Projects, at the developers discretion.</p>\n<p>\_</p>\n<p>They  are bright orange in color, and should be easily seen in the preview.  They are timed to show up, only one day, in a game year (Jan 1st).</p>\n<p>\_</p>\n<p>\_</p>\n<p>--------------------------------------</p>\n<p>PROPS</p>\n<p>--------------------------------------</p>\n<p>\_\_\_Diagonal - 4m</p>\n<p>\_\_\_Diagonal - 8m</p>\n<p>\_\_\_Diagonal - 12m</p>\n<p>\_\_\_Straight - 4m</p>\n<p>\_\_\_Straight - 8m</p>\n<p>\_\_\_Straight - 12m</p>\n<p>\_\_\_Straight - 16m</p>\n<p>\_</p>\n<p>\_</p>\n<p>--------------------------------------</p>\n<p>DEPENDENCIES</p>\n<p>--------------------------------------</p>\n<p>\_\_\_None</p>\n<p>\_</p>\n<p>--------------------------------------</p>\n<p>INSTALLATION</p>\n<p>--------------------------------------</p>\n<p>\_\_\_Unzip files to your 'Plugins' folder.</p>\n<p>\_</p>\n<p>\_\_\_Default Folder for Installation:</p>\n<p>\_\_\_.../My Documents/SimCity 4/Plugins/PEGPROD/SPOT</p>\n<p>\_</p>\n<p>--------------------------------------</p>\n<p>DEVELOPER NOTES</p>\n<p>--------------------------------------</p>\n<p>\_\_\_Please see the SPOT readme for general information.</p>\n<p>\_</p>\n<p>\_</p>\n<p>--------------------------------------</p>\n<p>CREDITS</p>\n<p>--------------------------------------</p>\n<p>\_\_\_BATs: Becca (RebaLynnTS)</p>\n<p>\_\_\_Lotting and Images: Paeng</p>\n\n\t\t\t\t\t\t</body>"
     file: PEG_SPOTv101.ZIP
+    filename: PEG_SPOTv101.ZIP
     files:
       - PEGPROD/SPOT/SPOT_v-rc101.dat
     images:
       - https://www.simtropolis.com/objects/screens/0017/9b7b8eb1b6c2f900afbbd75bbd5c6303-spot_promo.jpg
     lastModified: 2018-10-13T01:28:56.000Z
     meta:
-      timestamp: 2024-12-17T15:56:18.370Z
+      timestamp: 2025-01-06T12:12:25.449Z
       version: 1
     models:
       PEGPROD/SPOT/SPOT_v-rc101.dat:
@@ -730,6 +731,7 @@ assets:
     size: 23560
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2010/thumb-9b7b8eb1b6c2f900afbbd75bbd5c6303-spot_promo.jpg
     timestamp: 2024-07-24T12:13:33.510Z
+    uncompressed: 79276
     url: https://community.simtropolis.com/files/file/24509-spot-simpeg-plop-orientation-tool/
     version: '1.01'
   simtropolis/25391:
@@ -1449,4 +1451,4 @@ assets:
     url: https://community.simtropolis.com/files/file/4485-jbm-sims-ruler/
 
 meta:
-  timestamp: 2024-12-19T08:48:47.951Z
+  timestamp: 2025-01-06T10:30:47.596Z
