--- a/src/scripts/data/assets/overrides.yaml
+++ b/src/scripts/data/assets/overrides.yaml
@@ -3648,6 +3648,10 @@ simtropolis/486-commercial-6by-collection:
   packageId: buggi/commercial-6by-collection
   variantId: default
 
+simtropolis/53930-coris-parks-aura-deuteranopia:
+  packageId: corinamarie/parks-aura
+  variantId: deuteranopia
+
 simtropolis/554-residential-6by-collection:
   packageId: buggi/residential-6by-collection
   variantId: default
