--- a/src/scripts/data/assets/sc4evermore/18-reward.yaml
+++ b/src/scripts/data/assets/sc4evermore/18-reward.yaml
@@ -4,11 +4,21 @@ assets:
     authors:
       - Girafe
     category: 18-reward
-    downloads: 351
+    downloads: 353
     lastModified: 2024-01-22T17:20:29.000Z
     name: BSC-VIP Girafe-Mattb325 Moscow Christ The Saviour Cathedral
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Icon_Grfe_CTS_s.jpg
     url: https://www.sc4evermore.com/index.php/downloads/download/18-reward/227-bsc-vip-girafe-mattb325-moscow-christ-the-saviour-cathedral
+  sc4evermore/327:
+    assetId: sc4evermore/327-bsc-rayden-rural-mayor-house
+    authors:
+      - Rayden
+    category: 18-reward
+    downloads: 13
+    lastModified: 2025-01-07T23:51:01.000Z
+    name: BSC Rayden Rural Mayor House
+    thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/RMH_day.jpg
+    url: https://www.sc4evermore.com/index.php/downloads/download/18-reward/327-bsc-rayden-rural-mayor-house
 
 meta:
-  timestamp: 2025-01-06T10:30:47.596Z
+  timestamp: 2025-01-08T11:24:26.356Z
